# marketing-skills

./: .env.example  .gitignore  .pr-body.md  .venv  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SKILL.md  pyproject.toml  vibe.config.yaml
.skill/: manifest.json
00-orchestrator/: guardrails.md  orchestrator.md  workflow-selector.md
01-research/: competitor-analysis.md  research-framework.md
02-methodology/: halbert-starving-crowd.md  hopkins-principles.md  ogilvy-research.md  schwartz-stages.md
07-sequences/: 5-stage-build.md  audit-findings.md  channel-playbooks.md  expert-review.md  quality-gates.md
08-templates/: business-brief.md  email-sequence-brief.md  experiment-log.md  landing-page-brief.md  research-brief.md  seo-content-brief.md  weekly-review.md
09-tools/: .coverage  RELEASE-NOTES-v37.1.md  artifact_store.py  bootstrap.py  executor.py  onboard.py  onboard_api.py  onboard_report.py  onboard_web.py  pipeline_models.py  pipeline_runner.py  quality_check.py  requirements.txt  research_tools.py  setup.sh  stack_loader.py  state_store.py
10-snippets/: codex-snippets.json  kimi-snippets.json  vscode-snippets.json
reports/: onboarding_ttfv_report.json  onboarding_ttfv_report.md  policy_ops_2026-03-05.md  v45_rollout_simulation_report.json  v45_rollout_simulation_report.md  variant_comparison.json  variant_comparison.md
scripts/: check_editorial_thresholds.py  ci_weekly_health_report.sh  onboarding_ttfv_report.sh  test_battery_prerelease.sh  validate_v46_rollout.sh  vm_webapp_local.sh
tasks/: lessons.md  todo.md  (+1 more)
(+741 files in other folders)
