[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-skills"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "zvec>=0.1",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "09-tools" }

[tool.setuptools.packages.find]
where = ["09-tools"]
include = ["vm_webapp*"]

[tool.pytest.ini_options]
testpaths = ["09-tools/tests"]
